--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "moment": "^2.22.0",
-    "openzeppelin-solidity": "^1.12.0",
+    "openzeppelin-eth": "^2.0.0",
     "solc": "^0.4.24",
     "truffle-blockchain-utils": "^0.0.3",
-    "truffle-hdwallet-provider": "^0.0.3",
+    "truffle-hdwallet-provider": "^0.0.6",
     "zos-lib": "^2.0.0"
   },
   "devDependencies": {
