--- a/package.json
+++ b/package.json
@@ -42,15 +42,14 @@
     "web3-utils": "^1.0.0-beta.35"
   },
   "scripts": {
-    "build": "node scripts/build.js",
     "build-docs": "scripts/buildDocs.sh",
     "cleanup": "rm -rf build/ && mkdir build && rm -rf lib/ && mkdir lib",
-    "compile": "npm run cleanup && truffle compile --all && npm run build",
-    "deploy": "npm run cleanup && truffle migrate --reset && npm run build",
-    "deploy-rinkeby": "npm run cleanup && truffle migrate --reset --network rinkeby && npm run build",
-    "test": "npm run build && scripts/test.sh",
+    "compile": "npm run cleanup && truffle compile --all",
+    "deploy": "npm run cleanup && truffle migrate --reset",
+    "deploy-rinkeby": "npm run cleanup && truffle migrate --reset --network rinkeby",
+    "test": "scripts/test.sh",
     "test:truffle": "truffle test",
-    "test:coverage": "npm run build && npm run solidity-coverage",
+    "test:coverage": "npm run solidity-coverage",
     "ganache-cli": "scripts/runGanacheCLI.sh",
     "lint": "standard --verbose | snazzy"
   }
